# GoGuard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
Formula/: goguard.rb
crates/goguard-agent/: Cargo.toml
crates/goguard-agent/src/: autofix.rs  budget.rs  diff.rs  feedback.rs  go_tools.rs  http.rs  lib.rs  multi_session.rs  pipe.rs
crates/goguard-cli/: Cargo.toml  build.rs
crates/goguard-cli/src/: main.rs  sdk_gen.rs  updater.rs
crates/goguard-cli/tests/: integration.rs
crates/goguard-concurrency/: Cargo.toml
crates/goguard-concurrency/src/: analysis.rs  channel_fsm.rs  goroutine_leak.rs  lib.rs  shared_state.rs
crates/goguard-core/: Cargo.toml
crates/goguard-core/src/: bridge_manager.rs  config.rs  lib.rs  orchestrator.rs  rule_registry.rs  severity.rs
crates/goguard-db/: Cargo.toml
crates/goguard-db/src/: cache.rs  db.rs  inputs.rs  js_api.rs  js_runtime.rs  js_spec.rs  lib.rs  queries.rs  query.rs  query_engine.rs
crates/goguard-diagnostics/: Cargo.toml
crates/goguard-diagnostics/src/: agent.rs  diagnostic.rs  executable.rs  fix_generator.rs  full.rs  human.rs  lib.rs  markdown.rs  rules.rs  sarif.rs  skeleton.rs
crates/goguard-ecosystem/: Cargo.toml
crates/goguard-ecosystem/src/: agents_md.rs  claude_md.rs  extensions.rs  lib.rs  markers.rs  well_known.rs
crates/goguard-errcheck/: Cargo.toml
crates/goguard-errcheck/src/: analysis.rs  lib.rs  rules.rs
crates/goguard-errcheck/src/snapshots/: goguard_errcheck__fixture_tests__error_ignored.snap  goguard_errcheck__fixture_tests__safe_error_handling.snap
crates/goguard-exhaustive/: Cargo.toml
crates/goguard-exhaustive/src/: analysis.rs  enum_discovery.rs  lib.rs  rules.rs
crates/goguard-ir/: Cargo.toml
crates/goguard-ir/src/: call_graph.rs  cfg.rs  ir.rs  lib.rs  types.rs
crates/goguard-learn/: Cargo.toml
crates/goguard-learn/src/: annotations.rs  elicitation_store.rs  lib.rs  pattern_db.rs
crates/goguard-lsp/: Cargo.toml
crates/goguard-lsp/src/: code_actions.rs  diagnostics.rs  hover.rs  lib.rs  server.rs  tree_sitter.rs
crates/goguard-mcp/: Cargo.toml
crates/goguard-mcp/src/: elicitation.rs  lib.rs  output.rs  prompts.rs  resources.rs  server.rs  tasks.rs  tools.rs  verification.rs
crates/goguard-mcp/tests/: mcp_integration.rs
crates/goguard-nil/: Cargo.toml
crates/goguard-nil/src/: analysis.rs  lattice.rs  lib.rs  models.rs  rules.rs  summary.rs
crates/goguard-nil/src/snapshots/: goguard_nil__fixture_tests__basic_nil_deref.snap  goguard_nil__fixture_tests__error_ignored.snap  goguard_nil__fixture_tests__missing_return.snap  goguard_nil__fixture_tests__nil_map.snap  goguard_nil__fixture_tests__safe_patterns.snap  goguard_nil__fixture_tests__type_assertion.snap
crates/goguard-ownership/: Cargo.toml
crates/goguard-ownership/src/: analysis.rs  lib.rs  rules.rs  state_machine.rs
crates/goguard-taint/: Cargo.toml
crates/goguard-taint/src/: analysis.rs  lib.rs  propagation.rs  sinks.rs  sources.rs
crates/goguard-types/: Cargo.toml
crates/goguard-types/src/: generics.rs  interfaces.rs  lib.rs  types.rs
goguard-go-bridge/: analyzer.go  analyzer_test.go  cache.go  cache_integration_test.go  cache_test.go  call_edges_test.go  gen_fixtures_test.go  generated_detect.go  go.mod  go.sum  ir_builder.go  ir_builder_test.go  main.go
goguard-go-bridge/flatbuffers/goguard/ir/: AnalysisResult.go  BasicBlock.go  BridgeError.go  CallEdge.go  CallGraph.go  ChannelDir.go  DeferInfo.go  EnumConstant.go  EnumGroup.go  Function.go  FunctionSignature.go  Instruction.go  InstructionKind.go  InterfaceEntry.go  InterfaceTable.go  Operand.go  Package.go  Parameter.go  ReturnType.go  SelectCase.go  SourcePos.go  TypeInfo.go  TypeKind.go  Variable.go
schemas/: goguard-ir.fbs
sdk/python/: README.md  pyproject.toml
sdk/python/goguard/: __init__.py  client.py  models.py
sdk/python/tests/: test_goguard.py
tests/bridge_fixtures/errcheck/: ignored_error.fb  safe_error_handling.fb
tests/bridge_fixtures/nil/: basic_nil_deref.fb  error_ignored.fb  missing_return.fb  nil_map.fb  safe_patterns.fb  type_assertion.fb
tests/bridge_fixtures/taint/: command_injection.fb  interprocedural.fb  path_traversal.fb  safe_sanitized.fb  sql_injection.fb  xss.fb
tests/fixtures/bridge/interfaces/: go.mod  main.go
tests/fixtures/bridge/simple_project/: main.go
tests/fixtures/errcheck/: ignored_error.expected.json  ignored_error.go  safe_error_handling.go
tests/fixtures/nil/: basic_nil_deref.expected.json  basic_nil_deref.go  error_ignored.expected.json  error_ignored.go  missing_return.expected.json  missing_return.go  nil_map.expected.json  nil_map.go  safe_patterns.go  type_assertion.expected.json  type_assertion.go
tests/fixtures/taint/: command_injection.go  interprocedural.go  path_traversal.go  safe_sanitized.go  sql_injection.go  xss.go
