# SPDX-License-Identifier: MIT OR Apache-2.0
[workspace]
resolver = "2"
members = [
    "crates/goguard-cli",
    "crates/goguard-lsp",
    "crates/goguard-mcp",
    "crates/goguard-agent",
    "crates/goguard-ecosystem",
    "crates/goguard-learn",
    "crates/goguard-core",
    "crates/goguard-ir",
    "crates/goguard-types",
    "crates/goguard-db",
    "crates/goguard-diagnostics",
    "crates/goguard-nil",
    "crates/goguard-errcheck",
    "crates/goguard-concurrency",
    "crates/goguard-ownership",
    "crates/goguard-exhaustive",
    "crates/goguard-taint",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NextStat/GoGuard"
description = "Rust-level safety analyzer for Go — AI-agent-native static analysis"

[workspace.dependencies]
# Parsing
tree-sitter = "0.26"
tree-sitter-go = "0.25"

# Incremental computation
salsa = "0.26"

# LSP (community fork - tower-lsp is unmaintained!)
tower-lsp-server = "0.23"
tower = "0.5"

# Diagnostics
ariadne = "0.6"
miette = "7.6"

# Parsing (query language)
winnow = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
flatbuffers = "25.12"

# Async
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }
rustyline = "17"

# Parallelism
rayon = "1"

# Testing
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# MCP (official SDK - NOT jsonrpc-core which is deprecated!)
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }

# JSON Schema (for MCP tool params)
schemars = "1"

# Git
gix = "0.79"

# JavaScript runtime
boa_engine = "0.21"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
