[package]
name = "goguard-concurrency"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GoGuard concurrency - data race and goroutine leak analysis"

[dependencies]
goguard-ir = { path = "../goguard-ir" }
goguard-diagnostics = { path = "../goguard-diagnostics" }
goguard-types = { path = "../goguard-types" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
