[package]
name = "goguard-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GoGuard core - orchestrator, configuration, and rule registry"

[dependencies]
goguard-ir = { path = "../goguard-ir" }
goguard-diagnostics = { path = "../goguard-diagnostics" }
goguard-nil = { path = "../goguard-nil" }
goguard-errcheck = { path = "../goguard-errcheck" }
goguard-concurrency = { path = "../goguard-concurrency" }
goguard-ownership = { path = "../goguard-ownership" }
goguard-exhaustive = { path = "../goguard-exhaustive" }
goguard-taint = { path = "../goguard-taint" }
goguard-db = { path = "../goguard-db" }
dirs = "6"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
goguard-ir = { path = "../goguard-ir", features = ["test-fixtures"] }
