[package]
name = "goguard-diagnostics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GoGuard diagnostics - diagnostic rendering and output formats"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ariadne.workspace = true
miette.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
