[package]
name = "goguard-ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GoGuard ecosystem - AGENTS.md, well-known files, and extension support"

[dependencies]
goguard-core = { path = "../goguard-core" }
goguard-diagnostics = { path = "../goguard-diagnostics" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
