[package]
name = "goguard-exhaustive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GoGuard exhaustive - exhaustive switch/type-switch analysis"

[dependencies]
goguard-ir = { path = "../goguard-ir" }
goguard-diagnostics = { path = "../goguard-diagnostics" }
goguard-types = { path = "../goguard-types" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
