[package]
name = "goguard-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GoGuard IR - intermediate representation for Go programs"

[features]
test-fixtures = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
flatbuffers = { workspace = true }
