[project]
name = "goguard"
version = "0.1.0"
description = "GoGuard Python SDK -- CodeAct-native static analysis for Go"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "GoGuard" }]
readme = "README.md"
keywords = ["go", "golang", "static-analysis", "linter", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = ["pydantic>=2.0,<3.0"]

[project.urls]
Homepage = "https://github.com/NextStat/GoGuard"
Repository = "https://github.com/NextStat/GoGuard"
Issues = "https://github.com/NextStat/GoGuard/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["goguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
